Fix T47715: EXCEPTION_ACCESS_VIOLATION crash when removing modifiers or rendering

The issue was caused by missing indirect dependencies from other scenes in the
current scene depsgraph, which was causing some threading conflicts.

Not sure what would be ideal solution here, for now use stupid but rather robust
approach to solve that. Maybe there's something better to do here tho.